--- a/alanlib_ita/lib_supplemento.asciidoc
+++ b/alanlib_ita/lib_supplemento.asciidoc
@@ -1,6 +1,6 @@
 = Alan StdLib Italian: Supplemento
 Tristano Ajmone <tajmone@gmail.com>
-v0.8.0-Alpha, 2018-11-13: Alan 3.0beta6
+v0.8.1-Alpha, 2018-11-20: Alan 3.0beta6
 =============================================================================
 Modulo supplementare della liberia italiana, non presente nell'originale
 _ALAN Standard Library_ v2.1 di Anssi Räisänen.
@@ -66,13 +66,13 @@ italiano del modulo supplementare.
 
 // end::todo[]
 // tag::todo_checklist[]
-=== Check List
+=== Check-list generale
 
 Lista della spesa per le varie cosucce da fare:
 
 
 
-=== Check List Doxter 
+=== Check-list per Doxter
 
 Finisci di trasformare commenti in documentazione Doxter:
 
