--- a/alanlib_ita/lib_messaggi_libreria.asciidoc
+++ b/alanlib_ita/lib_messaggi_libreria.asciidoc
@@ -1,8 +1,9 @@
-= Alan StdLib Italian: Messaggi
+= Alan StdLib Italian: Messaggi Libreria
 Tristano Ajmone <tajmone@gmail.com>
-v0.8.2-Alpha, 2018-11-20: Alan 3.0beta6
+v0.9.0-Alpha, 2018-11-22: Alan 3.0beta6
 =============================================================================
-Adattamento italiano del modulo `lib_messages.i` della
+Adattamento italiano degli attributi per la messaggistica dei verbi, estratti
+dal modulo `lib_definitions.i` della
 _ALAN Standard Library_ v2.1, (C) Anssi Räisänen, Artistic License 2.1.
 Ad opera di Tristano Ajmone,  (C) 2018, Artistic License 2.1.
 =============================================================================
@@ -22,38 +23,15 @@ include::attributes-it.adoc[tag=attributes-it]
 :X: &#x2714;
 
 // end::custom_attributes[]
-// tag::intro[]
-
-== Introduzione
-
-
-Questo modulo della libreria è suddiviso in due parti:
-
-1. La prima parte ridefinisce i messaggi runtime di Alan.
-2. La seconda parte definisce gli attributi del `blocco_definizioni` che
-   contengono le stringhe usate per la messaggistica della libreria.
-
-Questo modulo è il cuore della libreria per quanto concerne il testo
-prodotto da essa. Modificando le stringhe degli attributi nella seconda parte
-è possibile alterare la forma ed i contenuti della maggior parte delle
-risposte predefinite dei verbi della libreria.
-
-// end::intro[]
-// tag::messaggi_runtime[]
-
-== Messaggi runtime di Alan
-
-
-[WARNING]
-========================================
-Documentazione non ancora disponibile...
-========================================
-
-// end::messaggi_runtime[]
 // tag::messaggi_libreria[]
 
 == Messaggi della Libreria
 
+
+Questo modulo è il cuore della libreria per quanto concerne il testo
+prodotto da essa. Modificando le stringhe degli attributi qui definiti, è
+possibile alterare la forma ed i contenuti della maggior parte delle risposte
+predefinite dei verbi della libreria.
 
 [WARNING]
 ========================================
